<resources>
    <string name="app_name">WMC Parent</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="gallery_fragment_lable">Home</string>
    <string name="menu_home">Home</string>
    <string name="menu_geofence">Set Geofence</string>
    <string name="menu_notifications">Notifications</string>
    <string name="map_view_bundle_key">MapViewBundleKey</string>
    <string name="connection_shp_name">ConnectionInfo</string>
    <string name="location_result_lable">onLocationResult location[Longitude,Latitude,Accuracy]:</string>
    <string name="location_availablity_lable">onLocationAvailability isLocationAvailable:</string>
    <string name="API_KEY">USE_YOUR_API_KEY</string>

    <string name="CLOUD_DB_NAME">test1</string>
    <string name="NOTIFICATION_FRAGMENT_TAG">TAG</string>
    <string name="OPEN_CLOUD_DB_SUCCESS_MSG">open clouddbzone success</string>
    <string name="NOTIFICATION_TAG">notification__</string>
    <string name="OPEN_DB_SUCCESS">openclouddbzonesuccess</string>
    <string name="DB_OPEN_FAILED_REASON">open clouddbzone failed for </string>
    <string name="FRAGMENT_NAME_TAG">NotificationFragment </string>
    <string name="TRY_REOPEN_MSG">CloudDBZone is null, try re-open it</string>
    <string name="PARENT_ID_COLUMN_NAME">ParentID</string>
    <string name="DATE_TIME_COLUMN_NAME">DateTime</string>

    <string name="QUERY_RESULT_LABLE">processQueryResult: </string>

    <string name="LOGIN_ACTIVITY_TAG">TAG</string>
    <string name="BACKGROUND_LOCATION_PERMISSION">android.permission.ACCESS_BACKGROUND_LOCATION</string>
    <string name="UNIQUE_ID_KEY">uniqueid</string>
    <string name="NOTIFICATION_BIG_TEXT">big</string>
    <string name="NOTIFICATION_BIG_TITLE">Today\'s Bible Verse</string>
    <string name="NOTIFICATION_SUMMARY">Text in detail</string>
    <string name="BUILDER_TITLE">Your Title</string>
    <string name="BUILDER_TEXT">Your text</string>
    <string name="NOTIFICATION_DEFAULT_CHANNEL_ID">4546</string>
    <string name="NOTIFICATION_DEFAULT_CHANNEL_NAME">Channel human readable title</string>
    <string name="SIGN_IN_FAILED_TAG">signin failed</string>
    <string name="SIGN_IN_FAILED_MSG">on error</string>

    <string name="SNACK_BAR_TEXT">Replace with your own action</string>
    <string name="SNACK_BAR_ACTION">Action</string>
    <string name="version_txt">Version:1.0</string>
    <string name="app_logo_txt">Warn My Child</string>
    <string name="parent_txt">WMC Parent</string>
    <string name="default_txt">xxxxxxxx</string>
    <string name="set_configuration">Set Configuration</string>
    <string name="welcome_scan">Welcome...</string>
    <string name="first_connect_child">To monitor the child location first connect with child through qr code scanning</string>
    <string name="clck_to_scan">Click here to scan</string>
    <string name="no_records_found">No records found</string>
    <string name="date">Date :</string>
    <string name="default_date">20/10/2020</string>
    <string name="child_details_msg">Your child entered the park</string>
    <string name="java">java</string>
    <string name="kotlin">kotlin</string>


</resources>