<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.huawei.parentapp.kotlin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        android:tag="Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_geofence"
        android:name="com.huawei.parentapp.kotlin.ui.gallery.SetGeofenceFragment"
        android:label="@string/menu_geofence"
        tools:layout="@layout/fragment_geofence" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.huawei.parentapp.kotlin.ui.slideshow.NotificationFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notification" />
</navigation>