<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/notificationbg"
        app:cardCornerRadius="@dimen/notification_card_radius"
        app:cardElevation="@dimen/notification_card_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/notificationbg"
            android:padding="@dimen/notification_layout_padding">

            <LinearLayout
                android:id="@+id/lay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_date_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/date"
                    android:textColor="#292828"
                    android:textSize="@dimen/date_txt_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txt_date_lbl"
                    android:fontFamily="casual"
                    android:text="@string/default_date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/date_txt_size"
                    android:textStyle="bold" />

            </LinearLayout>


            <TextView
                android:id="@+id/txt_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lay1"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/child_details_msg"
                android:textColor="@color/child_msg_txt_color"
                android:textSize="@dimen/child_msg_txt_size"
                android:textStyle="bold" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>
